add test jvm args